fix: make crafting output slot Java 8 compatible